add a github link

--- a/src/main/resources/web-ui/index.html
+++ b/src/main/resources/web-ui/index.html
@@ -83,6 +83,12 @@
             overflow-x: auto;
         }
 
+        #githubLink {
+            margin-top: 20px;
+            font-size: 0.9em;
+            text-align: center;
+        }
+
         .table-field {
             display: flex;
             align-items: center;
@@ -145,6 +151,11 @@
 
 <h2>Output:</h2>
 <pre id="asciiCat">Your ASCII cat will appear here...</pre>
+
+
+<div id="githubLink">
+    <a href="https://github.com/Planet-Seven/ASCII-cats" target="_blank">View on GitHub</a>
+</div>
 
 <script>
     const apiBase = "/cat";
