change default values for inputs

--- a/src/main/resources/web-ui/index.html
+++ b/src/main/resources/web-ui/index.html
@@ -140,7 +140,7 @@
 
 <h1>ASCII Cats Generator</h1>
 
-<label>Width: <input type="number" id="width" value="120" min="10" max="1920"></label>
+<label>Width: <input type="number" id="width" value="100" min="10" max="1920"></label>
 <label>Brightness: <input type="number" id="brightness" value="0" min="-255" max="255"></label>
 <label>Invert: <input type="checkbox" id="invert"></label>
 
@@ -152,7 +152,7 @@
             <option value="Custom">Custom</option>
         </select>
     </label>
-    <input type="text" id="customTable" placeholder="Enter custom table" style="display:none;">
+    <input type="text" id="customTable" placeholder="Enter custom table" value=".:-=+*#%" style="display:none;">
 </div>
 
 <button id="generate">Generate</button>
