--- a/src/main/resources/web-ui/index.html
+++ b/src/main/resources/web-ui/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>ASCII Cat Generator – Convert Images to ASCII Cats</title>
+    <title>ASCII Cat Generator – Generate ASCII art cat images.</title>
   
     <meta name="description" content="Generate ASCII art cat images. Customize width, brightness, inversion, and character tables.">
     <meta name="author" content="vojtechsvoboda.com">
