--- a/src/main/resources/web-ui/index.html
+++ b/src/main/resources/web-ui/index.html
@@ -53,7 +53,10 @@
 
 <button id="generate">Generate</button>
 
-<h2>Output:</h2>
+<h2 id="output-header">
+    Output:
+    <button id="copy">Copy</button>
+</h2>
 <pre id="asciiCat">Your ASCII cat will appear here...</pre>
 
 
